# PhageForge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  build_and_run.sh  check_files.sh
config/: amino_acids.toml
data/bacteria/: e_coli_o157.json  pseudomonas_aeruginosa.json
data/genomes/: default_phage.json  lab_strain_phage.json
docs/: PHASE1_SPECIFICATION.md
src/: CMakeLists.txt  main.cpp  main_cli.cpp  main_gui.cpp
src/biology/: AminoAcid.cpp  AminoAcid.hpp  Bacteria.cpp  Bacteria.hpp  Codon.cpp  Codon.hpp  Genome.cpp  Genome.hpp  QuorumSensing.cpp  QuorumSensing.hpp  Receptor.cpp  Receptor.hpp
src/core/: Constants.hpp  Exceptions.hpp  Types.hpp  Utilities.cpp  Utilities.hpp
src/gui/: MainWindow.cpp  PhageEditor.cpp  PhageEditor.hpp
src/physics/: BindingAssay.cpp  BindingAssay.hpp  Electrostatics.cpp  Electrostatics.hpp  VectorMath.cpp  VectorMath.hpp
src/render/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
src/serialization/: BinarySerializer.cpp  BinarySerializer.hpp  JSONSerializer.cpp  JSONSerializer.hpp
tests/: CMakeLists.txt
tests/integration/: test_binding_pathway.cpp
tests/unit/: test_codon.cpp  test_electrostatics.cpp  test_genome.cpp  test_quorum.cpp
